; ModuleID = '/home/carl/AnghaBench/lede/tools/firmware-utils/src/extr_mkdlinkfw-lib.c_write_fw.c'
source_filename = "/home/carl/AnghaBench/lede/tools/firmware-utils/src/extr_mkdlinkfw-lib.c_write_fw.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EXIT_FAILURE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [2 x i8] c"w\00", align 1
@.str.1 = private unnamed_addr constant [32 x i8] c"could not open \22%s\22 for writing\00", align 1
@errno = common dso_local global i64 0, align 8
@.str.2 = private unnamed_addr constant [28 x i8] c"unable to write output file\00", align 1
@.str.3 = private unnamed_addr constant [29 x i8] c"firmware file \22%s\22 completed\00", align 1
@EXIT_SUCCESS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @write_fw(i8* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %9 = load i32, i32* @EXIT_FAILURE, align 4
  store i32 %9, i32* %8, align 4
  %10 = load i8*, i8** %4, align 8
  %11 = call i32* @fopen(i8* %10, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  store i32* %11, i32** %7, align 8
  %12 = load i32*, i32** %7, align 8
  %13 = icmp eq i32* %12, null
  br i1 %13, label %14, label %17

14:                                               ; preds = %3
  %15 = load i8*, i8** %4, align 8
  %16 = call i32 (i8*, ...) @ERRS(i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str.1, i64 0, i64 0), i8* %15)
  br label %42

17:                                               ; preds = %3
  store i64 0, i64* @errno, align 8
  %18 = load i8*, i8** %5, align 8
  %19 = load i32, i32* %6, align 4
  %20 = load i32*, i32** %7, align 8
  %21 = call i32 @fwrite(i8* %18, i32 %19, i32 1, i32* %20)
  %22 = load i64, i64* @errno, align 8
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %26

24:                                               ; preds = %17
  %25 = call i32 (i8*, ...) @ERRS(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.2, i64 0, i64 0))
  br label %30

26:                                               ; preds = %17
  %27 = load i8*, i8** %4, align 8
  %28 = call i32 @DBG(i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.3, i64 0, i64 0), i8* %27)
  %29 = load i32, i32* @EXIT_SUCCESS, align 4
  store i32 %29, i32* %8, align 4
  br label %30

30:                                               ; preds = %26, %24
  %31 = load i32*, i32** %7, align 8
  %32 = call i32 @fflush(i32* %31)
  %33 = load i32*, i32** %7, align 8
  %34 = call i32 @fclose(i32* %33)
  %35 = load i32, i32* %8, align 4
  %36 = load i32, i32* @EXIT_SUCCESS, align 4
  %37 = icmp ne i32 %35, %36
  br i1 %37, label %38, label %41

38:                                               ; preds = %30
  %39 = load i8*, i8** %4, align 8
  %40 = call i32 @unlink(i8* %39)
  br label %41

41:                                               ; preds = %38, %30
  br label %42

42:                                               ; preds = %41, %14
  %43 = load i32, i32* %8, align 4
  ret i32 %43
}

declare dso_local i32* @fopen(i8*, i8*) #1

declare dso_local i32 @ERRS(i8*, ...) #1

declare dso_local i32 @fwrite(i8*, i32, i32, i32*) #1

declare dso_local i32 @DBG(i8*, i8*) #1

declare dso_local i32 @fflush(i32*) #1

declare dso_local i32 @fclose(i32*) #1

declare dso_local i32 @unlink(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
